objects/LOP_Field_Map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Salesforce to LOP field map</description>
    <fields>
        <fullName>LOP_Field_API_Name__c</fullName>
        <label>LOP Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOP_Object__c</fullName>
        <label>LOP Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SF_Field_API_Name__c</fullName>
        <label>SF Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Object__c</fullName>
        <label>SF Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_Value__c</fullName>
        <label>Static Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LOP Field Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SF_Object__c</columns>
        <columns>SF_Field_API_Name__c</columns>
        <columns>LOP_Object__c</columns>
        <columns>LOP_Field_API_Name__c</columns>
        <columns>Static_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>